tests/object-method/object-method.exp
Error: test2.js:4
  4:   return this.p;
                   ^ property `p`. Property not found in
  4:   return this.p;
              ^^^^ object literal

Error: test3.js:4
  4:   this.m();
            ^ property `m`. Property not found in
  4:   this.m();
       ^^^^ global object

Error: test3.js:4
  4:   this.m();
            ^ property `m`. Property not found in
  4:   this.m();
       ^^^^ object literal


Found 3 errors
